src/test/ui/issues/issue-40510-1.stderr
error: compilation successful
  --> $DIR/issue-40510-1.rs:23:1
   |
LL | fn main() {} //~ ERROR compilation successful
   | ^^^^^^^^^^^^

error: aborting due to previous error

